css contrast fix

--- a/practica1/estilo.css
+++ b/practica1/estilo.css
@@ -16,7 +16,6 @@ table {
 }
 
 th {
-    background-color: gray;
     font-weight: bold;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
