--- a/practica1/estilopremios.css
+++ b/practica1/estilopremios.css
@@ -4,3 +4,7 @@ table {
     text-align: left;
     position: static;
 }
+
+th {
+    background-color: gray;
+}
