--- a/practica1/estiloprotagonistas.css
+++ b/practica1/estiloprotagonistas.css
@@ -7,7 +7,7 @@ table {
 /*Especificidad: 1*/
 th {
     text-align: center;
-    background-color: white;
+    background-color: lightgray;
 }
 
 /*Especificidad: 3*/
